infra/cdk.out.destroy/CtcmDevNetworkStack.template.json
{
 "Description": "CTCM Network infrastructure - VPC, subnets, security groups",
 "Resources": {
  "LambdaSecurityGroup0BD9FC99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Lambda functions",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": "vpc-02563a885e06b672f"
   },
   "Metadata": {
    "aws:cdk:path": "CtcmDevNetworkStack/LambdaSecurityGroup/Resource"
   }
  },
  "DatabaseSecurityGroup7319C0F6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for RDS PostgreSQL database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "VpcId": "vpc-02563a885e06b672f"
   },
   "Metadata": {
    "aws:cdk:path": "CtcmDevNetworkStack/DatabaseSecurityGroup/Resource"
   }
  },
  "DatabaseSecurityGroupfromCtcmDevNetworkStackLambdaSecurityGroupEBEB2A415432F4C47725": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow Lambda functions to connect to PostgreSQL",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "DatabaseSecurityGroup7319C0F6",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "LambdaSecurityGroup0BD9FC99",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "CtcmDevNetworkStack/DatabaseSecurityGroup/from CtcmDevNetworkStackLambdaSecurityGroupEBEB2A41:5432"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/33JTQrCMBBA4bN0n4w1Irh3Ia6E9gAlpqNMq0mZH4uU3l3EvasH3wsQdgeoqziLT/3oH3SFpdWYRtegFOOELs7SYQqwtJiMSd8nLja54y3/h3O+M4qs33ExnUxXl0uPMMjmFQJs91BXgxB5tqz0RGh+/QAOpurllQAAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "CtcmDevNetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Description": "VPC ID",
   "Value": "vpc-02563a885e06b672f",
   "Export": {
    "Name": "CtcmDevVpcId"
   }
  },
  "LambdaSecurityGroupId": {
   "Description": "Lambda Security Group ID",
   "Value": {
    "Fn::GetAtt": [
     "LambdaSecurityGroup0BD9FC99",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "CtcmDevLambdaSecurityGroupId"
   }
  },
  "DatabaseSecurityGroupId": {
   "Description": "Database Security Group ID",
   "Value": {
    "Fn::GetAtt": [
     "DatabaseSecurityGroup7319C0F6",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "CtcmDevDatabaseSecurityGroupId"
   }
  },
  "ExportsOutputFnGetAttDatabaseSecurityGroup7319C0F6GroupId72A1B827": {
   "Value": {
    "Fn::GetAtt": [
     "DatabaseSecurityGroup7319C0F6",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "CtcmDevNetworkStack:ExportsOutputFnGetAttDatabaseSecurityGroup7319C0F6GroupId72A1B827"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
